--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -114,3 +114,4 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/lib")
 #add_subdirectory(tools)
 #add_subdirectory(test)
 add_subdirectory(helloworld)
+add_subdirectory(taint)
